force-app/main/default/objects/Account/fields/Last_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Code__c</fullName>
    <label>Last Response Code</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>