force-app/main/default/objects/Account/fields/Last_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Message__c</fullName>
    <label>Last Response Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>