force-app/main/default/objects/Account/fields/Last_Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_DateTime__c</fullName>
    <label>Last Sync DateTime</label>
    <type>DateTime</type>
</CustomField>